Fix: logo dimension in dark mode; Add: funders logo in Quadriga section (#225)
* Feat: Add story admonition type with styling and markdown support

* Feat: dark theme support for navbar logo and new section for Binder

* Feat: Add local execution guide for Jupyter Book

* fix(css): remove unnecessary width properties for dark mode navbar image

* add: funders logo in QUADRIGA.md

* Fix: typo in Bundesministerium


---------

--- a/_static/quadriga.css
+++ b/_static/quadriga.css
@@ -9,9 +9,6 @@
 }
 
 html[data-theme='dark'] .navbar-brand img {
-    height: 100%;
-    max-width: 100%;
-    width: auto;
     filter: invert(95%) hue-rotate(190deg) saturate(60%) brightness(135%);
 }
 
